--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(aBC aBC.c lista.c )
+add_executable(aBC aBC.c lista.c include/ssd1306_i2c.c)
 
 pico_set_program_name(aBC "aBC")
 pico_set_program_version(aBC "0.1")
@@ -46,6 +46,8 @@ pico_enable_stdio_usb(aBC 1)
 
 # Add the standard library to the build
 target_link_libraries(aBC
+        hardware_adc
+        hardware_i2c
         pico_stdlib)
 
 # Add the standard include files to the build
